<resources>
    <string name="app_name">TrackApp</string>
    <string name="track_app">TrackApp</string>
    <string name="loginID">Login ID</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="user_name">Full Name</string>
    <string name="confirm_password">confirm password</string>
    <string name="create_new_account">create new account</string>
    <string name="submit">Submit</string>
    <string name="welcome">Welcome</string>
    <string name="phn_num">Phone number</string>
    <string name="activity_name">Activity Name</string>
    <string name="title_activity_tabbed">Tabbed</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tab">Tab</string>
</resources>
