<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="225dp"
            android:orientation="vertical"
            android:background="#3498db">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="40dp"
                android:layout_marginLeft="15dp"
                android:textStyle="bold"
                android:textColor="#fdfefe"
                android:id="@+id/tv" />

            <ImageView
                android:layout_gravity="center"
                android:src="@drawable/l"
                android:layout_width="140dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/log"
                    />
                <EditText
                    android:layout_width="290dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:hint="@string/phn_num"
                    android:id="@+id/login_text" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/p1"></ImageView>
                <EditText
                    android:layout_width="290dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:id="@+id/password_text" />
            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/login"
                android:id="@+id/Login_button" />
            <Button

                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"

                android:text="@string/create_new_account"
                android:id="@+id/newAccount_button" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
